# elno

./: .env.example  .gitignore  .vercelignore  Anchor.toml  README.md  index.html  package-lock.json  package.json  vite.config.js
cli/: elno.mjs
docs/: ARCHITECTURE.md  FAQ.md  MANIFESTO.md  PROGRAM.md  ROADMAP.md  SELF-HOST.md  WHY-ELNO.md  osocial-p2p-architecture.md  osocial-peer-architecture.md  osocial-peer-mvp.md
idl/: elno.json
nft/: ART_PROMPT.txt  LAUNCH.md  config.json
nft/assets/: 0.json
peer/: README.md  package-lock.json  package.json
peer/src/: crypto.mjs  peer-cli.mjs
programs/osocial_registry/: Cargo.toml  test_elno.mjs
programs/osocial_registry/src/: lib.rs
scripts/: auth_safety_check.mjs  bench_brotli.mjs  check_mainnet_registry.mjs  devnet_burner.mjs  guard_mainnet_deploy.mjs  initialize_registry_config.mjs  mainnet_memo_brotli.mjs  peer_crypto_smoke.mjs  registration_pricing.mjs  set_registry_fee.mjs
server/: mainnet-signer.mjs
src/: chainClient.js  main.jsx  packetCodec.js  peerCrypto.js  styles.css
