[package]
name = "osocial_registry"
version = "0.1.0"
description = "Osocial wallet registration program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "osocial_registry"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.31.1"
